# medgemma-hackathon

./: .env.example  .gitignore  404.html  Makefile  PERF_PLAN.md  PROJECT_OVERVIEW.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy_docs.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
00/6c6398d68e/: metadata.json
05/85b4e73973/: metadata.json
0a/707194e390/: metadata.json
0b/4d12562b3b/: metadata.json
0e/3373a1861c/: metadata.json
0f/b9594f85eb/: metadata.json
18/8654cf2dc8/: metadata.json
19/1e46ede6e6/: metadata.json
19/43796ebf22/: metadata.json
1e/c2d36f9383/: metadata.json
20/480c5805b4/: metadata.json
22/54b390642d/: metadata.json
24/c00cef5e0e/: metadata.json
25/21bf651afa/: metadata.json
25/3376691760/: metadata.json
2e/ba8a2920e1/: metadata.json
30/789bc34621/: metadata.json
37/d6ecfa00e9/: metadata.json
38/08ddbaa8ca/: metadata.json
3c/2842df16d7/: metadata.json
3c/9cb9af7949/: metadata.json
3f/91363e4665/: metadata.json
40/6a98211bea/: metadata.json
4a/4f82155308/: metadata.json
4b/c8fc47a835/: metadata.json
4b/d2cca8b30a/: metadata.json
53/44a4675b6f/: metadata.json
54/5babba9054/: metadata.json
56/0955cc21f6/: metadata.json
58/9146fa6ab7/: metadata.json
5f/108bb6c8f3/: metadata.json
60/cbfa3641a3/: metadata.json
61/2cfadc9283/: metadata.json
64/ecc477cf09/: metadata.json
66/8b91af3990/: metadata.json
67/57b7716b98/: metadata.json
67/f1453cb92d/: metadata.json
69/5860da635c/: metadata.json
6e/bcd73f7fa1/: metadata.json
74/d70b0d0b9a/: metadata.json
75/3cc0c0fcda/: metadata.json
78/8d1603d957/: metadata.json
7e/4b083b6039/: metadata.json
7f/1f4e5f60d3/: metadata.json
80/be5b4839ec/: metadata.json
83/bef89b9d0f/: metadata.json
88/a08f218f5a/: metadata.json
8f/9f87dfa0ba/: metadata.json
95/4ef2cbf999/: metadata.json
97/1f50b11c17/: metadata.json
97/72728380ee/: metadata.json
9a/ce775ceb7a/: metadata.json
9c/8708d1250a/: metadata.json
9d/fcacd18259/: metadata.json
9e/1f65531cc5/: metadata.json
a0/2b79cb06c7/: metadata.json
a0/a6799b358d/: metadata.json
a2/4993385302/: metadata.json
a5/671700453a/: metadata.json
a8/0a3bd0f721/: metadata.json
a9/0ad692b004/: metadata.json
api-service/api/: index.html
apps/hitl-ui/: package-lock.json  package.json
architecture/: index.html
architecture/data-models/: index.html
architecture/system-architecture/: index.html
b0/cbb1945a7f/: metadata.json
b1/c71b734dbe/: metadata.json
b2/904e49eb32/: metadata.json
b3/8df887e6ff/: metadata.json
ba/6a29e919b6/: metadata.json
bb/2f46f05975/: metadata.json
bf/c4621e3dda/: metadata.json
c0/61c3419081/: metadata.json
code-tour/: index.html
components/: index.html
docs/: E2E-TEST-REPORT-2026-02-18.md  components-overview.md  index.md  jinja2-prompts.md  onboarding.md  openapi.json  testing-guide.md
infra/: .env.example  docker-compose.yml
jinja2-prompts/: index.html
journeys/: index.html
onboarding/: index.html
scripts/: check-all.sh  clear_mlflow_traces.py  e2e_smoketest.py  generate_components_overview.py  quality_eval.py  quality_eval_config.py  redact_leaked_secret_from_history.sh  setup-gcloud-adc.sh  setup-omop-vocab.sh  update_root_navigation.py  verify_gemini_access.py
search/: search_index.json
services/agent-a-service/: pyproject.toml
services/agent-a-service/src/agent_a_service/: graph.py  nodes.py  pdf_parser.py
services/agent-a-service/src/agent_a_service/nodes/: extract.py  ingest.py  parse.py  queue.py
services/agent-a-service/src/agent_a_service/schemas/: criteria.py
services/agent-b-service/: pyproject.toml
services/agent-b-service/src/agent_b_service/: __init__.py  graph.py  nodes.py  trigger.py  umls_client.py
services/agent-b-service/src/agent_b_service/nodes/: extract_entities.py  ground_to_umls.py  map_to_snomed.py
services/agent-b-service/src/agent_b_service/prompts/: user.jinja2
services/protocol-processor-service/: mkdocs.yml  pyproject.toml
services/protocol-processor-service/docs/api/: index.md
services/protocol-processor-service/scripts/: run_ordinal_e2e.py
services/protocol-processor-service/src/protocol_processor/: __init__.py  graph.py  main.py  state.py  tracing.py  trigger.py
services/protocol-processor-service/src/protocol_processor/config/: __init__.py  routing.yaml  ucum_mappings.yaml
services/protocol-processor-service/src/protocol_processor/nodes/: __init__.py  extract.py  ground.py  ingest.py  ordinal_resolve.py  parse.py  persist.py  structure.py
services/protocol-processor-service/src/protocol_processor/prompts/: __init__.py  entity_decompose.jinja2  grounding_evaluate.jinja2  grounding_reasoning.jinja2  grounding_system.jinja2  system.jinja2  user.jinja2
services/protocol-processor-service/src/protocol_processor/schemas/: __init__.py  extraction.py  grounding.py  ordinal.py  structure.py
services/protocol-processor-service/src/protocol_processor/tools/: __init__.py  entity_decomposer.py  field_mapper.py  gemini_extractor.py  gemini_utils.py  medgemma_decider.py  omop_mapper.py  ordinal_resolver.py  pdf_parser.py  structure_builder.py  terminology_router.py  tooluniverse_client.py  unit_normalizer.py
services/protocol-processor-service/tests/: __init__.py  conftest.py  test_graph.py  test_omop_mapper.py  test_ordinal_full_cycle.py  test_ordinal_resolve.py  test_phase1b_wiring.py  test_phase2_e2e.py  test_phase2_structure.py  test_phase3_integration.py  test_phase3b_e2e.py  test_sentence_extraction.py  test_terminology_router.py  test_unit_normalizer.py
services/umls-mcp-server/: README.md  pyproject.toml
services/umls-mcp-server/src/umls_mcp_server/: __init__.py  server.py  umls_api.py
services/umls-mcp-server/tests/: conftest.py  test_umls_client.py  test_umls_integration.py
status/: index.html
testing-guide/: index.html
(+1073 files in other folders)
