[project]
name = "protocol-processor-service"
version = "0.1.0"
description = "Consolidated 5-node LangGraph pipeline for protocol extraction and grounding"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "events-py",
    "inference",
    "umls-mcp-server",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "google-genai>=1.55.0",
    "tenacity>=8.2.0",
    "sqlmodel>=0.0.31",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.0",
    "platformdirs>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_processor"]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D102", "D103"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = [
    "../shared/src",
    "../inference/src",
    "../../libs/events-py/src",
    "../umls-mcp-server/src",
    "../grounding-service/src",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../api-service/src",
    "../shared/src",
    "../inference/src",
    "../../libs/events-py/src",
    "../umls-mcp-server/src",
    "../grounding-service/src",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
shared = { workspace = true }
events-py = { workspace = true }
inference = { workspace = true }
umls-mcp-server = { workspace = true }
